Doing some standardisation on the widgets

--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -22,15 +22,21 @@
 
     <hr>
 
-    <h2> Description: </h2>
+    <h2> Description </h2>
 
     <div class='description'>
       <p>
       The carousel is a widget to allow for horizontally scrolling (with touch or buttons) between a set of items. 
       </p>
     </div>
+    
+    <h2> Options </h2>
+    <div class="option">
+      <p>
+      </p>
+    </div>
 
-    <h2> Examples: </h2>
+    <h2> Demonstration </h2>
 
     <div class='test' name='One'>
 
