--- a/examples/example_list.html
+++ b/examples/example_list.html
@@ -15,6 +15,7 @@
         <li> <a href="carousel_examples.html"> Carousel </a> </li>
         <li> <a href="select_list_examples.html"> Select Lists </a> </li>
         <li> <a href="zoom_preview_examples.html"> Zoom Preview </a> </li>
+        <li> <a href="font_resizer_examples.html"> Font Resizer </a> </li>
         <li> <a href="map_examples.html"> Map </a></li>
       </ul>
     </div>
