--- a/examples/select_list.html
+++ b/examples/select_list.html
@@ -14,7 +14,7 @@
 
 <hr>
 
-<h2> Description: </h2>
+<h2> Description</h2>
 
 <div class='description'>
   <p>
@@ -23,7 +23,13 @@
   </p>
 </div>
 
-<h2> Examples: </h2>
+<h2>Options</h2>
+<div class="option">
+  <p>
+    </p>
+</div>
+
+<h2>Demonstration</h2>
 
 <div class='test' name='One'>
   <h3>Simple example.</h3>
