--- a/examples/tabs.html
+++ b/examples/tabs.html
@@ -17,7 +17,7 @@
 
     <hr>
 
-    <h2> Description: </h2>
+    <h2> Description </h2>
     <div class='description'>
       <p>
         Tabs are kind of like togglers, but allow a state to be defined.
@@ -25,7 +25,7 @@
     </div>
     
     <h2>Options</h2>
-    <div class="option_list">
+    <div class="option">
       <p>Here's a list of attributes to add to HTML to make the widget work</p>
       <ul>
         <li>data-ur-set="tabs" - add this attribute to a div that wraps the whole widget</li>
@@ -37,7 +37,7 @@
       </ul>
     </div>
 
-    <h2> Examples</h2>
+    <h2>Demonstration</h2>
     <div class='test' name='Simple' data-ur-set="tabs">
       <div class="description">
         <p>
