--- a/examples/toggler.html
+++ b/examples/toggler.html
@@ -24,7 +24,7 @@
     </div>
     
     <h2>Options</h2>
-    <div class="option_list">
+    <div class="option">
       <p>Here's a list of attributes to add to HTML to make the widget work</p>
       <ul>
         <li>data-ur-set="toggler" - add this attribute to a div that wraps the whole widget</li>
