--- a/examples/zoom_preview.html
+++ b/examples/zoom_preview.html
@@ -15,7 +15,7 @@
 
 <hr>
 
-<h2> Description: </h2>
+<h2> Description </h2>
 
 <div class='description'>
   <p>
@@ -34,7 +34,13 @@
 
 </div>
 
-<h2> Examples:</h2>
+<h2>Options</h2>
+<div class="option">
+  <p>
+    </p>
+</div>
+
+<h2> Demonstration</h2>
 <div class='test' name='Simple'>
 
   <h3> Touch and Drag on the thumbnail to view the zoom preview </h3>
