--- a/examples/font_resizer.html
+++ b/examples/font_resizer.html
@@ -12,7 +12,7 @@
   <h1>Font Resizer</h1>
   <hr>
   
-  <h2>Description:</h2>
+  <h2>Description</h2>
   <div class="description">
     <p>This widget allows us to change the font size of a specified page element.</p>
     <p>To use this widget, we need to use a couple of attributes. We can use the set method (i.e.
@@ -40,9 +40,8 @@
     </ul>
   </div>
   
-  
+  <h2>Demonstration</h2>
   <div class="test" data-ur-set="tabs">
-    <h2>A Simple Example</h2>
     <h3 data-ur-tabs-component='button' data-ur-tab-id="widget"data-ur-state='enabled'> Widget</h3>
 
     <h3 data-ur-tabs-component='button' data-ur-tab-id="html"> HTML</h3>
