--- a/examples/carousel_examples.html
+++ b/examples/carousel_examples.html
@@ -8,8 +8,32 @@
   </head>
   <body>
     <h1>Carousel Examples</h1>
+    <div class='test' name='One'>
+      <h3> Jump To.. function </h3>
+      <div id='jump'> Jump to 5th item </div>
+  
+      <div data-ur-set='carousel'
+        data-ur-carousel-component='view_container' data-ur-id='MyFirstCarousel'>
+        <span data-ur-carousel-component='count'> -- count -- </span>
+        <div data-ur-carousel-component='button'data-ur-carousel-button-type='prev' >
+          Prev
+        </div>
+        <div data-ur-carousel-component='button' data-ur-carousel-button-type='next' >
+          Next
+        </div>
+        <div data-ur-carousel-component='scroll_container'>
+          <img data-ur-carousel-component='item' src='images/sample1.png' />
+          <img data-ur-carousel-component='item' src='images/sample2.png' />
+          <img data-ur-carousel-component='item' src='images/sample3.png' />
+          <img data-ur-carousel-component='item' src='images/sample4.png' />
+          <img data-ur-carousel-component='item' src='images/sample5.png' />
+          <img data-ur-carousel-component='item' src='images/sample6.png' />
+          <img data-ur-carousel-component='item' src='images/sample7.png' />
+          <img data-ur-carousel-component='item' src='images/sample8.png' />
+        </div>       
+      </div>
+    </div>
     <div class='test' name='OnePointFive'>
-
       <h3> Touch enabled example. </h3>
 
       <p> This carousel allows for vertical scrolling.  </p>
