--- a/examples/zoom_preview.html
+++ b/examples/zoom_preview.html
@@ -64,7 +64,19 @@
       </div>
     </div>
     <div data-ur-tabs-component="content" data-ur-tab-id="html">
-      HTML goes here
+      <p class="code">
+        &lt;div data-ur-set='zoom-preview' data-ur-zoom-preview-component='container'></br>
+          &emsp;&emsp;&lt;img data-ur-zoom-preview-component='zoom_image' data-ur-src-modifier-match='(some_attr=)(.*)'</br> &emsp;&emsp;&emsp;&emsp;data-ur-src-modifier-replace='$1yesway' style="visibility: hidden" /></br></br>
+
+          &emsp;&emsp;&lt;div class="normal_image"></br>
+            &emsp;&emsp;&emsp;&emsp;&lt;img data-ur-zoom-preview-component='normal_image'</br>
+            &emsp;&emsp;&emsp;&emsp;data-ur-zoom-modifier-match='$' data-ur-zoom-modifier-replace='?small_image=true'</br> &emsp;&emsp;&emsp;&emsp;src="images/pic1.jpeg" /></br>
+          &emsp;&emsp;&lt;/div></br></br>
+
+          &emsp;&emsp;&lt;img data-ur-src-modifier-match='$' data-ur-src-modifier-replace='&button_image=true'</br> data-ur-zoom-preview-component='button'/></br></br>
+
+        &lt;/div></br>
+      </p>
     </div>
   </div>
 </div>
