first push on swipe toggle.

--- a/examples/swipe_toggle.html
+++ b/examples/swipe_toggle.html
@@ -4,6 +4,7 @@
     <title>Carousel Examples</title>
     <script src="../build/src/uranium-pretty.js"></script>
     <script src="../lib/swipe_toggle.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" type='text/css' href='css/swipe_toggle.css' />
   </head>
   <body>
@@ -12,7 +13,7 @@
         <div data-ur-swipe-toggle-component='next' data-ur-id='ima_live'>next</div>
         <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_live'>prev</div>
         <div data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_live' class="swipe_Bar">
-          <div>item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div><div>item 6</div>
+          <div >item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div><div>item 6</div>
         </div>
         
         <div class="mw_clear_both"></div>
@@ -20,7 +21,7 @@
         <div data-ur-swipe-toggle-component='next' data-ur-id='ima_zombie'>next</div>
         <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_zombie'>prev</div>
         <div data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_zombie' class="swipe_Bar">
-          <div>item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div><div>item 6</div>
+          <div data-ur-state="active">item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div><div>item 6</div>
         </div>
   
   </body>
