starting to add images

--- a/examples/swipe_toggle.html
+++ b/examples/swipe_toggle.html
@@ -20,8 +20,13 @@
         
         <div data-ur-swipe-toggle-component='next' data-ur-id='ima_zombie'>next</div>
         <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_zombie'>prev</div>
-        <div data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_zombie' class="swipe_Bar">
-          <div data-ur-state="active">item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div><div>item 6</div>
+        <div class="imageSwitcher" data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_zombie' class="swipe_Bar">
+          <div data-ur-state="active"><img src="images/sample1.png"></div>
+          <img src="images/sample2.png">
+          <a href="www.google.com"><img src="images/sample3.png"></a>
+          <div><img src="images/sample4.png"></div>
+          <div><img src="images/sample5.png"></div>
+          <div><img src="images/sample6.png"></div>
         </div>
   
   </body>
