--- a/examples/swipe_toggle.html
+++ b/examples/swipe_toggle.html
@@ -4,7 +4,7 @@
     <title>Carousel Examples</title>
     <script src="../build/src/uranium-pretty.js"></script>
     <script src="../lib/swipe_toggle.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" type='text/css' href='css/swipe_toggle.css' />
   </head>
   <body>
@@ -13,7 +13,7 @@
         <div data-ur-swipe-toggle-component='next' data-ur-id='ima_live'>next</div>
         <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_live'>prev</div>
         <div data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_live' class="swipe_Bar">
-          <div >item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div><div>item 6</div>
+          <div >item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div> 
         </div>
         
         <div class="mw_clear_both"></div>
@@ -21,13 +21,13 @@
         <div data-ur-swipe-toggle-component='next' data-ur-id='ima_zombie'>next</div>
         <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_zombie'>prev</div>
         <div class="imageSwitcher" data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_zombie' class="swipe_Bar">
-          <div data-ur-state="active"><img src="images/sample1.png"></div>
-          <img src="images/sample2.png">
-          <a href="www.google.com"><img src="images/sample3.png"></a>
-          <div><img src="images/sample4.png"></div>
-          <div><img src="images/sample5.png"></div>
-          <div><img src="images/sample6.png"></div>
+          <div data-ur-state="active"><img src="images/sample1.png"/></div>
+          <img src="images/sample2.png"/>
+          <a href="http://www.google.com"><img src="images/sample3.png"/></a>
+          <div><img src="images/sample4.png"/></div>
+          <div><img src="images/sample5.png"/></div>
+          <div><img src="images/sample6.png"/></div>
         </div>
-  
+
   </body>
 </html>
