--- a/examples/swipe_toggle.html
+++ b/examples/swipe_toggle.html
@@ -8,26 +8,47 @@
     <link rel="stylesheet" type='text/css' href='css/swipe_toggle.css' />
   </head>
   <body>
-      <h3>testing swipe toggle.</h3>
-      <div onclick="Ur.Widgets.SwipeToggle.ima_live.autoScroll('prev');">autoscroll left</div><div onclick="Ur.Widgets.SwipeToggle.ima_live.autoScroll('next');">autoscroll right</div>
-        <div data-ur-swipe-toggle-component='next' data-ur-id='ima_live'>next</div>
-        <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_live'>prev</div>
-        <div data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_live' class="swipe_Bar">
-          <div >item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div> 
-        </div>
-        
-        <div class="mw_clear_both"></div>
-        <div onclick="Ur.Widgets.SwipeToggle.ima_zombie.autoScroll('prev');">autoscroll left</div><div onclick="Ur.Widgets.SwipeToggle.ima_zombie.autoScroll('next');">autoscroll right</div>
-        <div data-ur-swipe-toggle-component='next' data-ur-id='ima_zombie'>next</div>
-        <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_zombie'>prev</div>
-        <div class="imageSwitcher" data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_zombie' class="swipe_Bar">
-          <div data-ur-state="active"><img src="images/sample1.png"/></div>
-          <img src="images/sample2.png"/>
-          <a href="http://www.google.com"><img src="images/sample3.png"/></a>
-          <div><img src="images/sample4.png"/></div>
-          <div><img src="images/sample5.png"/></div>
-          <div><img src="images/sample6.png"/></div>
-        </div>
+    <h3>testing swipe toggle.</h3>
+    <div id="live_auto_left">autoscroll left</div><div id="live_auto_right">autoscroll right</div>
+    <div data-ur-swipe-toggle-component='next' data-ur-id='ima_live'>next</div>
+    <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_live'>prev</div>
+    <div data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_live' class="swipe_Bar">
+      <div >item 1</div><div>item 2</div><div>item 3</div><div>item 4</div><div>item 5</div> 
+    </div>
 
+        <div class="mw_clear_both"></div>
+    <div id="empty_auto_left">autoscroll left</div><div id="empty_auto_right">autoscroll right</div>
+    <div data-ur-swipe-toggle-component='next' data-ur-id='ima_empty'>next</div>
+    <div class="imageSwitcher" data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_empty' class="swipe_Bar">
+    </div>
+
+    <div class="mw_clear_both"></div>
+    <div id="zombie_auto_left">autoscroll left</div><div id="zombie_auto_right">autoscroll right</div>
+    <div data-ur-swipe-toggle-component='next' data-ur-id='ima_zombie'>next</div>
+    <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_zombie'>prev</div>
+    <div class="imageSwitcher" data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_zombie' class="swipe_Bar">
+      <div data-ur-state="active"><img src="images/sample1.png"/></div>
+      <img src="images/sample2.png"/>
+      <a href="http://www.google.com"><img src="images/sample3.png"/></a>
+      <div><img src="images/sample4.png"/></div>
+      <div><img src="images/sample5.png"/></div>
+      <div><img src="images/sample6.png"/></div>
+    </div>
+    <script>
+      x$("#live_auto_left")[0].addEventListener("click", function () {
+        Ur.Widgets.SwipeToggle.ima_live.autoScroll('prev');
+        console.log("autoscroll")
+      });
+      x$("#live_auto_right")[0].addEventListener("click", function () {
+        Ur.Widgets.SwipeToggle.ima_live.autoScroll('next');
+      });
+
+      x$("#zombie_auto_left")[0].addEventListener("click", function () {
+        Ur.Widgets.SwipeToggle.ima_zombie.autoScroll('prev');
+      });
+      x$("#zombie_auto_right")[0].addEventListener("click", function () {
+        Ur.Widgets.SwipeToggle.ima_zombie.autoScroll('prev');
+      });
+    </script>
   </body>
 </html>
