--- a/examples/swipe_toggle.html
+++ b/examples/swipe_toggle.html
@@ -17,7 +17,7 @@
     </div>
 
         <div class="mw_clear_both"></div>
-    <div id="empty_auto_left">autoscroll left</div><div id="empty_auto_right">autoscroll right</div>
+    <div id="empty_auto_left">autoscroll left</div><div id="empty_auto_right">autoscroll right</div><div id="empty_populate_left">auto populate</div>
     <div data-ur-swipe-toggle-component='next' data-ur-id='ima_empty'>next</div>
     <div class="imageSwitcher" data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_empty' class="swipe_Bar">
     </div>
@@ -34,7 +34,42 @@
       <div><img src="images/sample5.png"/></div>
       <div><img src="images/sample6.png"/></div>
     </div>
+
+
+        <div class="mw_clear_both"></div>
+
+    <div class="mw_clear_both"></div>
+    <div id="zombie_auto_left">autoscroll left</div><div id="zombie_auto_right">autoscroll right</div>
+    <div data-ur-swipe-toggle-component='next' data-ur-id='ima_shape'>next</div>
+    <div data-ur-swipe-toggle-component='prev' data-ur-id='ima_shape'>prev</div>
+    <div class="shape" id="ima_shape" data-ur-swipe-toggle-component='slider' data-ur-set="swipe_toggle" data-ur-id='ima_shape' class="swipe_Bar">
+      <div data-ur-state="active"><img src="images/sample1.png"/></div>
+      <img src="images/sample2.png"/>
+      <a href="http://www.google.com"><img src="images/sample3.png"/></a>
+      <div><img src="images/sample4.png"/></div>
+      <div><img src="images/sample5.png"/></div>
+      <div><img src="images/sample6.png"/></div>
+      <div data-ur-state="active"><img src="images/sample1.png"/></div>
+      <img src="images/sample2.png"/>
+      <a href="http://www.google.com"><img src="images/sample3.png"/></a>
+      <div><img src="images/sample4.png"/></div>
+      <div><img src="images/sample5.png"/></div>
+      <div><img src="images/sample6.png"/></div>
+      <div data-ur-state="active"><img src="images/sample1.png"/></div>
+      <img src="images/sample2.png"/>
+      <a href="http://www.google.com"><img src="images/sample3.png"/></a>
+      <div><img src="images/sample4.png"/></div>
+      <div><img src="images/sample5.png"/></div>
+      <div><img src="images/sample6.png"/></div>
+    </div>
     <script>
+      x$("#ima_shape")[0].addEventListener("preferences", function (e) {// x$("[data-ur-id='ima_shape']")
+        console.log("preferences event was fired")
+        //e.swipe_object.preferences.loop = false;
+      });
+      x$("#empty_populate_left")[0].addEventListener("click", function () {
+        Ur.Widgets.SwipeToggle.ima_empty.autoPopulate(['<div><img src="images/sample4.png"/></div>', '<div><img src="images/sample5.png"/></div>', '<div><img src="images/sample6.png"/></div>'], "bottom");
+      });
       x$("#live_auto_left")[0].addEventListener("click", function () {
         Ur.Widgets.SwipeToggle.ima_live.autoScroll('prev');
         console.log("autoscroll")
