--- a/examples/lateload.html
+++ b/examples/lateload.html
@@ -22,11 +22,11 @@
 
     <div>
       the late load widget will prevent objects from loading until requested by the user. there is only one mandatory attribute<br><br><b>data-ur-ll-src=</b> or <b>data-ur-ll-href=</b><br><br>
-      however <b>data-ur-ll-event=</b> attriburte will select the group that the late loaded element is attached to.<br><br>there are 4 standard groups that handle your events for you.
+      however <b>data-ur-ll-event=</b> attribute will select the group that the late loaded element is attached to.<br><br>there are 4 standard groups that handle your events for you.
       the <b>click or touch, DOMContentLoaded, load and scroll</b> if any group bares these names its event handeling and functionality are taken care of. any other group name is saved
       in the Ur.Widgets.late_load.components["your_group"]<br><br>
 
-      <span class="note">NOTE: some images will not display untill the page is scrolled, if this is an issue, please add the plutonium widget "auto_scroll.js"</span>
+      <span class="note">NOTE: some images will not display until the page is scrolled, if this is an issue, please add the plutonium widget "auto_scroll.js"</span>
       <br><br>
     </div>
 
