change page title

--- a/examples/lateload.html
+++ b/examples/lateload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html>
   <head>
-    <title>Carousel </title>
+    <title>Late Load</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 
     <script src="../build/src/uranium-pretty.js"></script>
