update examples to use the uranium-pretty build for testing purposes

--- a/examples/example_list.html
+++ b/examples/example_list.html
@@ -17,6 +17,8 @@
         <li> <a href="zoom_preview_examples.html"> Zoom Preview </a> </li>
         <li> <a href="font_resizer_examples.html"> Font Resizer </a> </li>
         <li> <a href="map_examples.html"> Map </a></li>
+        <li> <a href="geocode.html"> Reverse Geocode </a></li>
+        <li> <a href="swipe_toggle.html"> Swipe Toggle</a></li>
       </ul>
     </div>
   </body>
