--- a/examples/font_resizer_examples.html
+++ b/examples/font_resizer_examples.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Font Resizer Unit Test</title>
-  <script src="../build/src/uranium.js"></script>
+   <script src="../build/src/uranium-pretty.js"></script>
   <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/resizer.css' />
 </head>
