--- a/examples/map_examples.html
+++ b/examples/map_examples.html
@@ -4,9 +4,9 @@
     <title> Map Unit Tests</title>
 
 <script src="../build/src/uranium-pretty.js"></script>
- <script src="../lib/external/xui-2.0.0.js"></script>
+ <!-- <script src="../lib/external/xui-2.0.0.js"></script>
   <script src="../lib/uranium_mixins.js"></script>
-  <script src="../lib/map.js"></script>
+  <script src="../lib/map.js"></script> -->
 
    <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/map.css' />
