--- a/examples/example_list.html
+++ b/examples/example_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
     <title>Example List</title>
@@ -19,6 +19,7 @@
         <li> <a href="map_examples.html"> Map </a></li>
         <li> <a href="geocode.html"> Reverse Geocode </a></li>
         <li> <a href="swipe_toggle.html"> Swipe Toggle</a></li>
+        <li> <a href="select_buttons.html"> Select Buttons </a></li>
       </ul>
     </div>
   </body>
