fix reference location

--- a/examples/geocode/_select_elements.html
+++ b/examples/geocode/_select_elements.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   <title>Geocode</title>
-   <script src="../build/src/uranium-pretty.js"></script>
+   <script src="../../build/src/uranium-pretty.js"></script>
   <link rel="stylesheet" type='text/css' href='../css/test.css' />
   <link rel="stylesheet" type='text/css' href='../css/geocode.css' />
 </head>
