update example to test new wrap around feature

--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -4,9 +4,9 @@
     <title>Carousel </title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 
-  <script src="../build/src/uranium-pretty.js"></script>
+  <!-- <script src="../build/src/uranium-pretty.js"></script> -->
 
-  <script src="../lib/external/xui-2.0.0.js"></script>
+  <script src="../lib/external/xui-2.3.2.js"></script>
   <script src="../lib/uranium_mixins.js"></script>
   <script src="../lib/carousel.js"></script>
 
