update the other files to include the example files

--- a/examples/map.html
+++ b/examples/map.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title> Map Unit Tests</title>
- <script src="../build/src/uranium-pretty.js"></script>
+ <!-- <script src="../build/src/uranium-pretty.js"></script> -->
 
- <script src="../lib/external/xui-2.0.0.js"></script>
+ <script src="../lib/external/xui-2.3.2.js"></script>
   <script src="../lib/uranium_mixins.js"></script>
   <script src="../lib/map.js"></script>
 
