--- a/examples/example_list.html
+++ b/examples/example_list.html
@@ -20,6 +20,7 @@
         <li> <a href="geocode.html"> Reverse Geocode </a></li>
         <li> <a href="swipe_toggle.html"> Swipe Toggle</a></li>
         <li> <a href="select_buttons.html"> Select Buttons </a></li>
+        <li> <a href="table/table.html"> Flex Table </a> </li>
       </ul>
     </div>
   </body>
