--- a/examples/widget_list.html
+++ b/examples/widget_list.html
@@ -19,6 +19,7 @@
         <li> <a href="font_resizer.html"> Font Resizer </a> </li>
         <li> <a href="map.html"> Maps </a> </li>
         <li> <a href="geocode.html"> Geocode </a> </li>
+        <li> <a href="table/table.html"> Flex Table </a> </li>
       </ul>
     </div>
   </body>
