update show/hide, allow multiple tables to be affected on one page

--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -10,11 +10,11 @@
 		<link rel="stylesheet" href="_css/reset.css" />
 		<link rel="stylesheet" href="_css/rwd-table.css" />
 		
-		 <script src="../../build/src/uranium-pretty.js"></script>
+     <!-- <script src="../../build/src/uranium-pretty.js"></script> -->
 		
-    <!-- <script src="../../lib/external/xui-2.3.2.js"></script>
+    <script src="../../lib/external/xui-2.3.2.js"></script>
     <script src="../../lib/uranium_mixins.js"></script>
-    <script src="../../lib/table.js"></script> -->
+    <script src="../../lib/table.js"></script>
 		
 	</head>
 
