updating uranium version in example.

--- a/examples/tabs_examples.html
+++ b/examples/tabs_examples.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Tabs</title>
- <script src="../build/src/uranium-pretty.js"></script>
-<!--  <script src="../lib/external/xui-2.0.0.js"></script>
+<!-- <script src="../build/src/uranium-pretty.js"></script> -->
+  <script src="../lib/external/xui-2.3.2.js"></script>
   <script src="../lib/uranium_mixins.js"></script>
   <script src="../lib/tabs.js"></script>
--->
+
    <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/tabs.css' />
   </head>
