--- a/examples/carousel_kl.html
+++ b/examples/carousel_kl.html
@@ -1,65 +1,82 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html>
   <head>
     <title>Carousel Examples</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; user-scalable=0;" />
+    <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 user-scalable=0">
     <script src="../build/src/uranium-pretty.js"></script>
     <style type="text/css">
       body {
         margin: 0px;
       }
-      #mw_carousel {
-        background: white;
-      }
-      
       [data-ur-carousel-component="view_container"] {
-        background: #eee;
-        display: inline-block;
         overflow: hidden;
-        width: 360px;
-        height: 178px;
+        height: 120px;
+        position: relative; /* only for :before pseudo-selector */
+      }
+      [data-ur-carousel-component="view_container"]::before {
+        -moz-box-shadow: white 14px 0 10px -7px inset, white -14px 0 10px -7px inset;
+        -webkit-box-shadow: white 14px 0 10px -7px inset, white -14px 0 10px -7px inset;
+        box-shadow: white 14px 0 10px -7px inset, white -14px 0 10px -7px inset;
+        content: "";
+        pointer-events: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
       }
       [data-ur-carousel-component="scroll_container"] {
-        height: 178px;
+        margin: 0 auto; /* These 2 lines are needed so that the carousel */
+        width: 209px;   /* doesn't look offset when it hasn't loaded yet */
+      }
+      [data-ur-carousel-component="item"] {
+        -webkit-user-drag: none; /* only for non-mobile browser */
+        float: left;
+        width: 209px;
+        height: 120px;
       }
       [data-ur-carousel-button-type] {
-        -webkit-border-radius: 4px;
-        border: 1px solid #ccc;
-        background: #eee;
-        padding: 5px;
+        -webkit-user-select: none;
+        -moz-border-radius: 3px;
+        -webkit-border-radius: 3px;
+        border-radius: 3px;
+        background: -moz-linear-gradient(#fafafa, #e6e6e6);
+        background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fafafa), color-stop(100%, #e6e6e6));
+        background: -webkit-linear-gradient(#fafafa, #e6e6e6);
+        -moz-box-shadow: #ddd 0 2px 2px, white 0 2px 1px inset;
+        -webkit-box-shadow: #ddd 0 2px 2px, white 0 2px 1px inset;
+        box-shadow: #ddd 0 2px 2px, white 0 2px 1px inset;
+        border: 1px solid #ddd;
+        border-bottom-color: #ccc;
+        color: #555;
         display: inline-block;
+        font: 10px Helvetica, "Segoe WP", "Segoe UI", sans-serif;
         margin: 10px 0 10px 5px;
+        padding: 5px;
+        width: 60px;
+        text-align: center;
+        text-shadow: white 0 1px;
+        text-transform: uppercase;
       }
-      [data-ur-carousel-button-type="prev"] {
-        margin-right: 180px;
-      }
-      img {
-        -webkit-transform: translate(0, 0) !important;
-        -webkit-user-drag: none;
-        float: left;
-        width: 313px;
-        height: 178px;
+      [data-ur-carousel-button-type="next"] {
+        float: right;
+        margin-right: 5px;
       }
     </style>
   </head>
   <body>
     <div id="mw_carousel" data-ur-set="carousel" data-ur-id="home" data-ur-state="enabled">
-      <div>
-        <a href="javascript://" onclick="transform_prefix='translate('; transform_suffix=')'; x$('#mw_scroll img').setStyle('-webkit-transform', '')">TRANSFORM</a>
-        <a href="javascript://" onclick="transform_prefix='translate3d('; transform_suffix=', 0px)'; x$('#mw_scroll img').setStyle('-webkit-transform', 'translate3d(0px, 0px, 0px)')">TRANSFORM3D</a>
+      <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" data-ur-state="enabled">previous</div>
+      <div data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-state="enabled">next</div>
+      <div data-ur-carousel-component="view_container" data-ur-autoscroll="enabled" data-ur-autoscroll-delay="5000">
+      <div data-ur-carousel-component="scroll_container">
+        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-birthday.png" data-ur-state="inactive">
+        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-dogable.png" data-ur-state="active">
+        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-dotw2.png">
+        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-bonsai.png">
+        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-happyhour.png">
       </div>
-      <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Previous</div>
-      <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
-      <div data-ur-carousel-component="view_container" data-ur-autoscroll="enabled" data-ur-autoscroll-delay="600">
-      <div id="mw_scroll" data-ur-carousel-component="scroll_container">
-        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-birthday.png" />
-        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-dogable.png" />
-        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-dotw2.png" />
-        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-bonsai.png" />
-        <img data-ur-carousel-component="item" src="http://d1topzp4nao5hp.cloudfront.net/1800flowers/1.10.522/images/carousel/car-happyhour.png" />
     </div>
-    </div>
-    <div>
+    <div style="padding: 10px;">
       You open an account: You, your employer or both can contribute to the account. You can use your HSA anytime to help pay your out-of-pocket health plan expenses, such as your deductible and other qualified medical expenses such as dental and vision.
        You pay your deductible from the account: Once your account is used up, you pay the rest of the deductible (the amount you’re responsible for) out of your own pocket.
        Once you’ve met your deductible, you pay your coinsurance: Once your deductible is met, your health plan begins to pay a portion (coinsurance) or all of your expenses until your out-of-pocket maximum is met. How much you pay will depend on your plan.
