--- a/examples/swipe_toggle.html
+++ b/examples/swipe_toggle.html
@@ -3,7 +3,7 @@
   <head>
     <title>Carousel Examples</title>
     <script src="../build/src/uranium-pretty.js"></script>
-    <!-- <script src="../lib/swipe_toggle.js"></script> -->
+    <script src="../lib/swipe_toggle.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" type='text/css' href='css/swipe_toggle.css' />
   </head>
