building base uranium for demo pages for easier debugging.

--- a/examples/font_resizer_examples.html
+++ b/examples/font_resizer_examples.html
@@ -1,7 +1,8 @@
 <html>
 <head>
   <title>Font Resizer Unit Test</title>
-   <script src="../build/src/uranium-pretty.js"></script>
+   <script src="../build/ur_base/uranium-base-pretty.js"></script>
+   <script src="../lib/font_resizer.js"></script>
   <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/resizer.css' />
 </head>
