--- a/examples/infinite_carousel_example.html
+++ b/examples/infinite_carousel_example.html
@@ -3,7 +3,8 @@
   <head>
     <title>Carousel Examples</title>
     <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 user-scalable=0">
-    <script src="../build/src/uranium-pretty.js"></script>
+    <script src="../build/ur_base/uranium-base-pretty.js"></script>
+    <script src="../lib/carousel.js"></script>
     <style type="text/css">
       body {
         margin: 0px;
