--- a/examples/map.html
+++ b/examples/map.html
@@ -4,8 +4,7 @@
     <title> Map Unit Tests</title>
  <!-- <script src="../build/src/uranium-pretty.js"></script> -->
 
- <script src="../lib/external/xui-2.3.2.js"></script>
-  <script src="../lib/uranium_mixins.js"></script>
+  <script src="../build/ur_base/uranium-base-pretty.js"></script>
   <script src="../lib/map.js"></script>
 
    <link rel="stylesheet" type='text/css' href='css/test.css' />
