--- a/examples/select_list.html
+++ b/examples/select_list.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title> Select Lists Unit Tests</title>
-    <script src="../build/src/uranium.js"></script>
+<script src="../build/ur_base/uranium-base-pretty.js"></script>
+<script src="../lib/select_list.js"></script>
 <link rel="stylesheet" type='text/css' href='css/test.css' />
 <link rel="stylesheet" type='text/css' href='css/select_lists.css' />
 <link rel="stylesheet" type='text/css' href='css/tabs.css' />
