--- a/examples/select_list_examples.html
+++ b/examples/select_list_examples.html
@@ -2,11 +2,8 @@
 <html>
   <head>
     <title>Tabs</title>
- <script src="../build/src/uranium-pretty.js"></script>
-<!--  <script src="../lib/external/xui-2.0.0.js"></script>
-  <script src="../lib/uranium_mixins.js"></script>
-  <script src="../lib/tabs.js"></script>
--->
+    <script src="../build/ur_base/uranium-base-pretty.js"></script>
+    <script src="../lib/select_list.js"></script>
    <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/tabs.css' />
   </head>
