--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -6,8 +6,7 @@
 
   <!-- <script src="../build/src/uranium-pretty.js"></script> -->
 
-  <script src="../lib/external/xui-2.3.2.js"></script>
-  <script src="../lib/uranium_mixins.js"></script>
+  <script src="../build/ur_base/uranium-base-pretty.js"></script>
   <script src="../lib/carousel.js"></script>
 
 
