--- a/examples/carousel_examples.html
+++ b/examples/carousel_examples.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Carousel Examples</title>
-   <script src="../build/src/uranium-pretty.js"></script>
+    <script src="../build/ur_base/uranium-base-pretty.js"></script>
+    <script src="../lib/carousel.js"></script>
    <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/carousel.css' />
   </head>
