--- a/examples/toggler_examples.html
+++ b/examples/toggler_examples.html
@@ -2,10 +2,8 @@
 <html>
   <head>
     <title>Toggler Examples</title>
-   <!-- <script src="../build/src/uranium-pretty.js"></script> -->
-   <script src="../lib/external/xui-2.3.2.js"></script>
-   <script src="../lib/uranium_mixins.js"></script>
-   <script src="../lib/toggler.js"></script>
+    <script src="../build/ur_base/uranium-base-pretty.js"></script>
+    <script src="../lib/toggler.js"></script>
    
    <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/toggler.css' />
