--- a/examples/zoom_preview.html
+++ b/examples/zoom_preview.html
@@ -3,7 +3,8 @@
   <head>
     <title>Zoom Preview</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <script src="../build/src/uranium.js"></script>
+    <script src="../build/ur_base/uranium-base-pretty.js"></script>
+    <script src="../lib/zoom_preview.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/tabs.css' />
     <link rel="stylesheet" type='text/css' href='css/zoom_preview.css' />
