--- a/examples/zoom_preview_examples.html
+++ b/examples/zoom_preview_examples.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Zoom Preview Examples</title>
-   <script src="../build/src/uranium-pretty.js"></script>
+    <script src="../build/ur_base/uranium-base-pretty.js"></script>
+    <script src="../lib/zoom_preview.js"></script>
    <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/zoom_preview.css' />
   </head>
