--- a/examples/infinite_carousel_example.html
+++ b/examples/infinite_carousel_example.html
@@ -3,7 +3,9 @@
   <head>
     <title>Carousel Examples</title>
     <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 user-scalable=0">
-    <script src="../build/src/uranium-pretty.js"></script>
+    <script src="../lib/external/xui-2.3.2.js"></script>
+    <script src="../lib/uranium_mixins.js"></script>
+    <script src="../lib/carousel.js"></script>
     <style type="text/css">
       body {
         margin: 0px;
@@ -42,10 +44,12 @@
       }
       [data-ur-carousel-component="item"] span {
         font-family: sans-serif;
-        font-size: 32px;
+        font-size: 48px;
+        font-weight: bold;
         line-height: 40px;
         margin-top: -20px;
         margin-left: -20px;
+        opacity: 0.6;
         position: absolute;
         top: 50%;
         left: 50%;
