--- a/examples/correct/widget_list.html
+++ b/examples/correct/widget_list.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>Example List</title>
-    <script src="../build/src/uranium-pretty.js"></script>
+    <title>Widget List</title>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
   </head>
   <body>
-    <h1>Examples</h1>
+    <h1>Widget List</h1>
     <div id="detail">
       <p>Here's a list of examples of widget use</p>
-      <ul>
-        <li> <a href="toggler_examples.html"> Toggler </a> </li>
-        <li> <a href="tabs_examples.html"> Tabs </a> </li>
+      <ol>
         <li> <a href="carousel_examples.html"> Carousel </a> </li>
-        <li> <a href="select_list_examples.html"> Select Lists </a> </li>
-        <li> <a href="zoom_preview_examples.html"> Zoom Preview </a> </li>
         <li> <a href="font_resizer_examples.html"> Font Resizer </a> </li>
-        <li> <a href="map_examples.html"> Map </a></li>
         <li> <a href="geocode.html"> Reverse Geocode </a></li>
-        <li> <a href="swipe_toggle.html"> Swipe Toggle</a></li>
+        <li> <a href="lateload.html"> Lateload </a></li>
+        <li> <a href="map_examples.html"> Map </a></li>
         <li> <a href="select_buttons.html"> Select Buttons </a></li>
+        <li> <a href="select_list_examples.html"> Select Lists </a> </li>
+        <li> <a href="swipe_toggle.html"> Swipe Toggle</a></li>
         <li> <a href="table/table.html"> Flex Table </a> </li>
-      </ul>
+        <li> <a href="tabs_examples.html"> Tabs </a> </li>
+        <li> <a href="toggler_examples.html"> Toggler </a> </li>
+        <li> <a href="zoom_preview_examples.html"> Zoom Preview </a> </li>
+      </ol>
     </div>
   </body>
 </html>
