Fix a small typo

--- a/examples/correct/toggler/toggler.html
+++ b/examples/correct/toggler/toggler.html
@@ -57,7 +57,7 @@
       </pre>
       <p>or the css equivalent</p>
       <pre>
-        /* Required SCSS Styling */
+        /* Required CSS Styling */
 
         *[data-ur-set='toggler'] *[data-ur-toggler-component='content'] {
           display:none;
