small cleanup on this file

--- a/examples/correct/toggler/toggler.html
+++ b/examples/correct/toggler/toggler.html
@@ -34,7 +34,7 @@
     
     <h2>Options</h2>
     <div class="option">
-      <h3>HTML Attributes</h3>
+      <h3>Required HTML Attributes</h3>
       <pre>
         data-ur-set="toggler"
         data-ur-toggler-component="button"
@@ -55,7 +55,6 @@
           }
         }
       </pre>
-      <p>or the css equivalent</p>
       <pre>
         /* Required CSS Styling */
 
