--- a/examples/correct/widget_list.html
+++ b/examples/correct/widget_list.html
@@ -18,8 +18,8 @@
         <li> <a href="select_list_examples.html"> Select Lists </a> </li>
         <li> <a href="swipe_toggle.html"> Swipe Toggle</a></li>
         <li> <a href="table/table.html"> Flex Table </a> </li>
-        <li> <a href="tabs_examples.html"> Tabs </a> </li>
-        <li> <a href="toggler_examples.html"> Toggler </a> </li>
+        <li> <a href="tabs/tabs.html"> Tabs </a> </li>
+        <li> <a href="toggler/toggler.html"> Toggler </a> </li>
         <li> <a href="zoom_preview_examples.html"> Zoom Preview </a> </li>
       </ol>
     </div>
